# nix-python

./: .env  .env-docker  .gitignore  Makefile  Procfile.dev  README.rst  flake.nix  pyproject.toml
migrations/: env.py
migrations/versions/: 3d88ffe26be3_first_migration.py
nix_python/: database.py  main.py  schemas.py
tests/: test_nix_python.py
