[tool.poetry]
name = "nix-python"
version = "0.1.0"
description = ""
authors = ["werner mendizabal <nonameentername@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "nix_python.main:start"
